--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "dbproject2019",
-  "version": "0.1.0",
+  "name": "204321-204361-project-client",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@types/jest": "^24.0.20",
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "axios": "^0.19.0",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-starter-kit": "^1.0.0",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
