--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "axios": "^0.19.0",
-    "bulma": "^0.8.0",
     "js-cookie": "^2.2.1",
-    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
@@ -44,6 +42,8 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "@types/react-redux": "^7.1.5"
+    "@types/react-redux": "^7.1.5",
+    "bulma": "^0.8.0",
+    "node-sass": "^4.13.0"
   }
 }
