--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/socket.io-client": "^1.4.32",
     "axios": "^0.19.0",
     "js-cookie": "^2.2.1",
     "react": "^16.11.0",
+    "react-chat-ui": "^0.3.2",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
