--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/socket.io-client": "^1.4.32",
     "axios": "^0.19.0",
     "js-cookie": "^2.2.1",
+    "lottie-react-web": "^2.1.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
